report tracker test