@@ -4,13 +4,11 @@ import mia.modmod.ColorBank;
 import mia.modmod.Mod;
 import mia.modmod.features.FeatureManager;
 import mia.modmod.features.impl.moderation.reports.DatedReport;
-import mia.modmod.features.impl.moderation.reports.ReportScreenFeature;
-import mia.modmod.features.impl.moderation.tracker.PlayerOutliner;
+import mia.modmod.features.impl.moderation.reports.ReportTracker;
 import mia.modmod.render.screens.Animation;
 import mia.modmod.render.screens.AnimationStage;
 import mia.modmod.render.util.*;
 import mia.modmod.render.util.elements.*;
-import net.minecraft.ChatFormatting;
 import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.client.input.CharacterEvent;
@@ -23,26 +21,17 @@ import java.util.ArrayList;
 import java.util.List;
 
 public class ReportScreen extends Screen {
-    private final PlayerOutliner playerOutliner;
+    private final ReportTracker reportTracker;
     private final Screen parent;
     public final Animation animation;
-
-    private String selectedPlayer = null;
-    private boolean hasMovedCursor = false;
-    private Point firstMousePosition = null;
 
     private ArrayList<DrawButton> buttons = new ArrayList<>();
 
     public ReportScreen(Screen parent) {
-        super(Component.literal("MODQA"));
+        super(Component.literal("REPORT_SCREEN"));
         this.parent = parent;
         this.animation = new Animation(AnimationStage.OPENING, 0f, EasingFunctions::easeInOutCircular);
-        this.playerOutliner = FeatureManager.getFeature(PlayerOutliner.class);
-        if (!playerOutliner.getTrackedPlayers().isEmpty()) this.selectedPlayer = playerOutliner.getTrackedPlayers().getFirst();
-    }
-
-    private void setSelectedPlayer(String playerName) {
-        this.selectedPlayer = playerName;
+        this.reportTracker = FeatureManager.getFeature(ReportTracker.class);
     }
 
     @Override
@@ -64,10 +53,11 @@ public class ReportScreen extends Screen {
         mainContainer.setSelfBinding(new DrawBinding(AxisBinding.MIDDLE, AxisBinding.MIDDLE));
 
         int margin = 4;
-        int reportHeight = ((Mod.MC.font.lineHeight + 1) * 4) + (margin * 2);
+        int lineHeight = (Mod.MC.font.lineHeight + 1);
+        int reportHeight = (lineHeight * 4) + (margin * 2);
         int i = 0;
 
-        for (DatedReport report : FeatureManager.getFeature(ReportScreenFeature.class).reports) {
+        for (DatedReport report : FeatureManager.getFeature(ReportTracker.class).reports) {
             String node_formated = report.private_text() + report.node_text() + " " + report.node_number();
             String node_id = report.private_text().isEmpty() ? "node" + report.node_number() : "private" + report.node_number();
             List<Component> reportText = List.of(
@@ -79,11 +69,23 @@ public class ReportScreen extends Screen {
 
             DrawButton reportContainer = new DrawButton(
                     new Point(0, reportHeight * i),
-                    new Point(Mod.MC.font.width(reportText.get(0).getString()), reportHeight),
+                    new Point(Mod.MC.font.width(reportText.getFirst().getString()) + (margin * 2), reportHeight),
                     new ARGB(ColorBank.WHITE, 1f),
                     new ARGB(ColorBank.MC_RED, 1f),
                     mainContainer
             );
+
+            for (Component line : reportText) {
+                DrawText lineText = new DrawText(
+                        new Point(margin, margin + (lineHeight * i)),
+                        line,
+                        animation.getProgress(),
+                        true,
+                        reportContainer
+                );
+            }
+
+            i++;
         }
 
         mainContainer.render(context, mouseX, mouseY);
@@ -97,13 +99,6 @@ public class ReportScreen extends Screen {
     @Override
     public void render(@NonNull GuiGraphics context, int mouseX, int mouseY, float delta) {
         if (parent != null) parent.render(context, Integer.MIN_VALUE, Integer.MIN_VALUE, delta);
-        //this.renderBlurredBackground(context);
-        if (firstMousePosition == null) {
-            firstMousePosition = new Point(mouseX, mouseY);
-        } else {
-            if (firstMousePosition.equals(new Point(mouseX, mouseY))) hasMovedCursor = true;
-        }
-
         draw(context, mouseX, mouseY);
 
         super.render(context, mouseX, mouseY, delta);
@@ -116,8 +111,6 @@ public class ReportScreen extends Screen {
 
     @Override
     public boolean mouseClicked(@NonNull MouseButtonEvent click, boolean doubled) {
-        // to prevent accidentally clicking the first button option when you open screen
-        if (!hasMovedCursor) return false;
         for (DrawButton button : buttons) {
             button.mouseClick(click, doubled);
         }
@@ -150,6 +143,6 @@ public class ReportScreen extends Screen {
         if (animation.getAnimationStage().equals(AnimationStage.OPEN)) {
             animation.setAnimationStage(AnimationStage.CLOSING);
         }
-        if (parent == null) Mod.MC.setScreen((Screen) null);
+        if (parent == null) Mod.MC.setScreen(null);
     }
 }
